# python-project-skeleton

./: .gitignore  readme.md  setup.py
src/galicsauce/: common_strings.py  use_op.py
src/tf_op/: CMakeLists.txt
src/tf_op/src/: CMakeLists.txt
src/tf_op/src/kernel/: zero_out_kernel.cpp
src/tf_op/src/op/: zero_out_op.cpp
src/tf_op/test/: CMakeLists.txt  hello_test.cpp
test/: test_hello_world.py
